k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-bot-service
  labels:
    app: slack-bot
spec:
  selector:
    app: slack-bot
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
